# demo-fastapi-prometheus

./: README.md  pyproject.toml
examples/: example0.py  example1.py  example2.py  example3.py
src/fast_api_ex1/: __init__.py  constants.py  fast_api_server.py
src/fast_api_ex1/custom_metrics/: __init__.py  incoming_message_metric.py  job_metric.py  outgoing_message_metric.py  work_metric.py
src/fast_api_ex1/monitoring/metrics/: timed_metric.py
