[project]
name = "fast-api-ex1"
version = "0.1.0"
description = "Let's go psycho!"
authors = [{name = "Rob Blackbourn", email = "rob.blackbourn@gmail.com"}]
readme = "README.md"
dependencies = [
    "fastapi[standard]",
    "prometheus-fastapi-instrumentator",
    "aioconsole",
    "setuptools",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pylint",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# pylint
[tool.pylint.main]
py-version = "3.12"
jobs = 4

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_"]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-module-docstring",
    "missing-function-docstring",
]

# pytest
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "function"

# mypy
[tool.mypy]
files = [ "src/fast_api_ex1", "tests", "examples" ]

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true
